{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 365,
  "lineage": "9e33865f-ffca-092f-08cc-c253cb6dfa4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:loadbalancer/app/bonmoja-staging-alb/864b4f590f43a64f",
            "arn_suffix": "app/bonmoja-staging-alb/864b4f590f43a64f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bonmoja-staging-alb-1328918230.af-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:af-south-1:336468392315:loadbalancer/app/bonmoja-staging-alb/864b4f590f43a64f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bonmoja-staging-alb",
            "preserve_host_header": false,
            "region": "af-south-1",
            "security_groups": [
              "sg-03a68dc142eeb004d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e799f897fa7ca279"
              },
              {
                "subnet_id": "subnet-0ff00e8b2aea5d110"
              }
            ],
            "subnets": [
              "subnet-0e799f897fa7ca279",
              "subnet-0ff00e8b2aea5d110"
            ],
            "vpc_id": "vpc-01bd27467622fc639",
            "xff_header_processing_mode": "append",
            "zone_id": "Z268VQBMOI5EKX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:loadbalancer/app/bonmoja-staging-alb/864b4f590f43a64f"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:listener/app/bonmoja-staging-alb/864b4f590f43a64f/59327b00b6c1a954",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:targetgroup/bonmoja-staging-http-echo-tg/ac917fb50045a04b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:336468392315:listener/app/bonmoja-staging-alb/864b4f590f43a64f/59327b00b6c1a954",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:loadbalancer/app/bonmoja-staging-alb/864b4f590f43a64f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "af-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:listener/app/bonmoja-staging-alb/864b4f590f43a64f/59327b00b6c1a954"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:targetgroup/bonmoja-staging-http-echo-tg/ac917fb50045a04b",
            "arn_suffix": "targetgroup/bonmoja-staging-http-echo-tg/ac917fb50045a04b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:336468392315:targetgroup/bonmoja-staging-http-echo-tg/ac917fb50045a04b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bonmoja-staging-http-echo-tg",
            "port": 5678,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "af-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:336468392315:targetgroup/bonmoja-staging-http-echo-tg/ac917fb50045a04b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:security-group/sg-03a68dc142eeb004d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a68dc142eeb004d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bonmoja-staging-ralb-sg",
            "name_prefix": "",
            "owner_id": "336468392315",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "sg-03a68dc142eeb004d",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:security-group/sg-0cc90e42585a2ba92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc90e42585a2ba92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a68dc142eeb004d"
                ],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "bonmoja-staging-ecs-sg",
            "name_prefix": "",
            "owner_id": "336468392315",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "sg-0cc90e42585a2ba92",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:security-group/sg-05cbc62019c01a027",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05cbc62019c01a027",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc90e42585a2ba92"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bonmoja-staging-rds-sg",
            "name_prefix": "",
            "owner_id": "336468392315",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "sg-05cbc62019c01a027",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:network-acl/acl-0282765fbbdd62407",
            "default_network_acl_id": "acl-0282765fbbdd62407",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0282765fbbdd62407",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "336468392315",
            "region": "af-south-1",
            "subnet_ids": [
              "subnet-037384e536d75ef07",
              "subnet-05a7fff2b1eac4d48",
              "subnet-0e799f897fa7ca279",
              "subnet-0ff00e8b2aea5d110"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-default",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-default",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:route-table/rtb-07d11e61efdfe0323",
            "default_route_table_id": "rtb-07d11e61efdfe0323",
            "id": "rtb-07d11e61efdfe0323",
            "owner_id": "336468392315",
            "propagating_vgws": null,
            "region": "af-south-1",
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-default",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-default",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:security-group/sg-08364607ff90fc5f7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08364607ff90fc5f7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "336468392315",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-default",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-default",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db90b3aa5af2e60f",
            "arn": "arn:aws:ec2:af-south-1:336468392315:elastic-ip/eipalloc-0db90b3aa5af2e60f",
            "domain": "vpc",
            "id": "eipalloc-0db90b3aa5af2e60f",
            "network_border_group": "af-south-1",
            "public_dns": "ec2-13-246-252-158.af-south-1.compute.amazonaws.com",
            "public_ip": "13.246.252.158",
            "public_ipv4_pool": "amazon",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:internet-gateway/igw-02a925eca81ee5ead",
            "id": "igw-02a925eca81ee5ead",
            "owner_id": "336468392315",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db90b3aa5af2e60f",
            "association_id": "eipassoc-051a40a2cc6e37fe0",
            "connectivity_type": "public",
            "id": "nat-08e222a5ba3de1943",
            "network_interface_id": "eni-04528f1adede9758e",
            "private_ip": "10.0.101.56",
            "public_ip": "13.246.252.158",
            "region": "af-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff00e8b2aea5d110",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0568f409e8c0183441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08e222a5ba3de1943",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "af-south-1",
            "route_table_id": "rtb-0568f409e8c018344",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "af-south-1",
            "route_table_id": "rtb-0568f409e8c018344"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a925eca81ee5ead",
            "id": "r-rtb-0b99187ceb0fd38231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "af-south-1",
            "route_table_id": "rtb-0b99187ceb0fd3823",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "af-south-1",
            "route_table_id": "rtb-0b99187ceb0fd3823"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:route-table/rtb-0568f409e8c018344",
            "id": "rtb-0568f409e8c018344",
            "owner_id": "336468392315",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-private",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-private",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "rtb-0568f409e8c018344",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:route-table/rtb-0b99187ceb0fd3823",
            "id": "rtb-0b99187ceb0fd3823",
            "owner_id": "336468392315",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-public",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-public",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "rtb-0b99187ceb0fd3823",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075cbe8fa02b0b913",
            "region": "af-south-1",
            "route_table_id": "rtb-0568f409e8c018344",
            "subnet_id": "subnet-037384e536d75ef07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0797f400a8b795def",
            "region": "af-south-1",
            "route_table_id": "rtb-0568f409e8c018344",
            "subnet_id": "subnet-05a7fff2b1eac4d48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ab75b7c8be08e55",
            "region": "af-south-1",
            "route_table_id": "rtb-0b99187ceb0fd3823",
            "subnet_id": "subnet-0ff00e8b2aea5d110"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047cf4412a0b94cee",
            "region": "af-south-1",
            "route_table_id": "rtb-0b99187ceb0fd3823",
            "subnet_id": "subnet-0e799f897fa7ca279"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:subnet/subnet-037384e536d75ef07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037384e536d75ef07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336468392315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-private-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-private-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "subnet-037384e536d75ef07",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:subnet/subnet-05a7fff2b1eac4d48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a7fff2b1eac4d48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336468392315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-private-af-south-1b",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-private-af-south-1b",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "subnet-05a7fff2b1eac4d48",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:subnet/subnet-0ff00e8b2aea5d110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff00e8b2aea5d110",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336468392315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-public-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-public-af-south-1a",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "subnet-0ff00e8b2aea5d110",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:subnet/subnet-0e799f897fa7ca279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e799f897fa7ca279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336468392315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-public-af-south-1b",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc-public-af-south-1b",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bd27467622fc639"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336468392315",
            "id": "subnet-0e799f897fa7ca279",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:336468392315:vpc/vpc-01bd27467622fc639",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0282765fbbdd62407",
            "default_route_table_id": "rtb-07d11e61efdfe0323",
            "default_security_group_id": "sg-08364607ff90fc5f7",
            "dhcp_options_id": "dopt-0128b25399a818f96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bd27467622fc639",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d11e61efdfe0323",
            "owner_id": "336468392315",
            "region": "af-south-1",
            "tags": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc",
              "Project": "bonmoja",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "bonmoja-staging-vpc",
              "Project": "bonmoja",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}